fix layout issues

--- a/13/assets/css/main.css
+++ b/13/assets/css/main.css
@@ -47,6 +47,12 @@ a {
     font-weight: 400;
     font-size: 24px;
     line-height: 21px;
+    color: #16133D;
+}
+
+.service-item--icon path{
+    transition-property: fill;
+    transition-duration: 1s;
 }
 
 .header-info {
@@ -80,6 +86,7 @@ a {
     letter-spacing: 0;
     text-align: left;
     color: #7690A8;
+    display: block;
 }
 
 h1 {
@@ -88,6 +95,7 @@ h1 {
     font-weight: 600;
     line-height: 52px;
     text-align: left;
+    color: #16133D;
 }
 
 
@@ -99,6 +107,8 @@ h1 {
     width: 370px;
     height: 340px;
     padding: 40px;
+    transition-property: border;
+    transition-duration: 1s;
 }
 
 .service-item--link {
@@ -115,6 +125,7 @@ h1 {
 
 .service-item--text {
     margin: 15px 0 30px;
+    color: #16133D;
 }
 
 .service-item--icon {
@@ -181,6 +192,8 @@ h1 {
 
 .service-item:hover {
     border: 1px solid #3DB370FF;
+    transition-property: border;
+    transition-duration: 1s;
 }
 
 .icon--1, .icon--2, .icon--5 {
@@ -217,12 +230,10 @@ h1 {
 
 .footer-icon--default {
     display: block;
-    transition-property: display;
 }
 
 .footer-icon--hover {
     display: none;
-    transition-property: display;
 }
 
 .footer-link-item:hover .footer-icon--default {
